// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.network;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/network";


service EthernetService {
  // New logs into a Chrome session as a fake user. Close must be called later
  // to clean up the associated resources.
  rpc New (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Close releases the resources obtained by New.
  rpc Close (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // DownloadPath returns the download path from cryptohome.
  rpc DownloadPath (google.protobuf.Empty) returns (DownloadResponse) {}
}

message EthernetResponse{
    string IPAddress = 1;
}


message DownloadResponse{
    string DownloadPath = 1;
}